--- a/pages/watchlist.html
+++ b/pages/watchlist.html
@@ -1,23 +1,113 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" data-bs-theme="dark">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Blockbuster: Wishlist</title>
-    <!-- External Documents -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Bebas+Neue&display=swap" rel="stylesheet">
 
-    <!-- Internal Documents -->
+    <!-- Style Sheet -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
-    <script src="../JS/index.js"></script>
-    
 </head>
-<body>
-    
+<body class="bg-dark">
+
+    <!-------------------------------------------------------------------------------------------------------------------------------------------------->
+    <!-- Nav Bar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+
+           <!-- Logo -->
+          <a class="navbar-brand" href="#">
+            <img src="../assets/Logo.png" alt="...">
+          </a>
+
+          <!-- Nav Items -->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/library.html">Library</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/watchlist.html">Watch List</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            </form>
+            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+            </svg>
+          </div>
+        </div>
+    </nav>
+
+    <!-------------------------------------------------------------------------------------------------------------------------------------------------->
+    <!-- Page Content  -->
+    <div class="container">
+        <div class="row align-content-center">
+            <div class="col-12 col-md-6 mb-2">
+                <img src="#" class="card-img">
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">Movie Title</h5>
+                      <h6 class="card-subtitle mb-2 text-body-secondary">Release Date:</h6>
+                      <p class="card-text">Summary of the movie as well as actors.</p>
+                      <a href="#" class="card-link">View</a>
+                    </div>
+                  </div>
+            </div>
+        </div>
+
+        <div class="row align-content-center">
+            <div class="col-12 col-md-6 mb-2">
+                <img src="#" class="card-img">
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">Movie Title</h5>
+                      <h6 class="card-subtitle mb-2 text-body-secondary">Release Date:</h6>
+                      <p class="card-text">Summary of the movie as well as actors.</p>
+                      <a href="#" class="card-link">View</a>
+                    </div>
+                  </div>
+            </div>
+        </div>
+
+        <div class="row align-content-center">
+            <div class="col-12 col-md-6 mb-2">
+                <img src="#" class="card-img">
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">Movie Title</h5>
+                      <h6 class="card-subtitle mb-2 text-body-secondary">Release Date:</h6>
+                      <p class="card-text">Summary of the movie as well as actors.</p>
+                      <a href="#" class="card-link">View</a>
+                    </div>
+                  </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+    <!-- Javascript -->
+     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+     <script src="../JS/index.js"></script>
 </body>
 </html>
