finalizing styling on the sign up and sign in page

--- a/pages/sign up.html
+++ b/pages/sign up.html
@@ -60,10 +60,11 @@
         </nav>
     
 
-<!------------------------------------------------------------------------------------------------------------>
-<!-----Form sign up------->
+ <!------------------------------------------------------------------------------------------------------------>
+ <!-----Form sign up------->
   <div class="container-form-su">
-    <div class="col-box-form"></div>
+    <div class="col-box-form">
+    </div>
         <h2>RELIVE THE OLD DAYS!</h2>
     <form action="#" method="POST">
         <div class="form-group">
@@ -87,16 +88,10 @@
           <div class="forgot-password">
             <p><a class="link-opacity-75" href="#">Forgot Your Password?</a></p>
           </div>
-        <button-su type="submit"><b>Sign Up</b></button-su>
-        <button-su type="submit"><b>Sign In</b></button-su>
+        <button-su type="submit"><b><h2>Sign Up</h2></b></button-su>
+        <button-su type="submit"><b><h2>Sign In</h2></b></button-su>
     </form>
   </div>
-=======
-<body>
-    
-
->>>>>>> Stashed changes
-
 
 
 
