--- a/pages/movie.html
+++ b/pages/movie.html
@@ -53,7 +53,7 @@
         
             <div class="container">
                 <!-- Side Content -->
-                <div class="row">
+                <div class="row movie-row">
                     <div class="col-12 col-md-6 mb-3">
                         <div class="side-cards">
                             <div class="card m-3" style="width: 40%; height: 380px;">
