--- a/pages/sign in.html
+++ b/pages/sign in.html
@@ -63,7 +63,7 @@
  <!-----Form sign in------->
   <div class="container-form-si">
     <div class="col-box-form"></div>
-        <h2>RELIVE THE OLD DAYS!</h2>
+        <h2 id="title-text">RELIVE THE OLD DAYS!</h2>
     <form action="#" method="POST">
         <div class="form-group">
             <label for="username">Username</label>
