--- a/pages/sign up.html
+++ b/pages/sign up.html
@@ -65,7 +65,7 @@
   <div class="container-form-su">
     <div class="col-box-form">
     </div>
-        <h2>RELIVE THE OLD DAYS!</h2>
+        <h2 id="title-text">RELIVE THE OLD DAYS!</h2>
     <form action="#" method="POST">
         <div class="form-group">
             <label for="username">Username</label>
