--- a/pages/library.html
+++ b/pages/library.html
@@ -22,7 +22,7 @@
         <div class="container">
 
             <!-- Logo -->
-            <a class="navbar-brand" href="../index.html"><img src="assets/Logo.svg" alt="logo.png" height="32px"></a>
+            <a class="navbar-brand" href="../index.html"><img src="../assets/Logo with layer.png" alt="logo.png" height="32px"></a>
 
             <!-- Nav items -->
             <ul class="nav">
@@ -39,7 +39,7 @@
                   <div class="nav-link"></div>
                 </li>
                 <li class="nav-item">
-                  <div class="nav-link profile"></div>
+                    <a href="sign in.html"><div class="nav-link profile"></div></a>
                 </li>
             </ul>
         </div>
