--- a/pages/movie.html
+++ b/pages/movie.html
@@ -13,38 +13,30 @@
 
         <!-------------------------------------------------------------------------------------------------------------------------------------------------->
         <!-- Nav Bar -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-
-            <!-- Logo -->
-            <a class="navbar-brand" href="#">
-                <img src="../assets/Logo 1.png" alt="...">
-            </a>
-
-            <!-- Nav Items -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../pages/library.html">Library</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="../pages/watchlist.html">Watch List</a>
-                </li>
+        <nav class="navbar fixed-top">
+            <div class="container">
+    
+                <!-- Logo -->
+                <a class="navbar-brand" href="#"><img src="assets/Logo with layer.png" alt="logo.png" height="32px"></a>
+    
+                <!-- Nav items -->
+                <ul class="nav">
+                    <li class="nav-item">
+                        <p class="nav-link active" >Home</p>
+                    </li>
+                    <li class="nav-item">
+                      <a href="pages/library.html"><P class="nav-link" >Library</P></a>
+                    </li>
+                    <li class="nav-item">
+                      <a href="pages/watchlist.html"><P class="nav-link">Watchlist</P></a>
+                    </li>
+                    <li class="nav-item">
+                      <div class="nav-link"></div>
+                    </li>
+                    <li class="nav-item">
+                      <a href="pages/sign in.html"><div class="nav-link profile"></div></a>
+                    </li>
                 </ul>
-                <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                </form>
-                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
-                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-                </svg>
-            </div>
             </div>
         </nav>
 
@@ -102,25 +94,7 @@
 
         <!----------------------------------------------------------------------------------------------------------------------------------------->
         <!-- Footer -->
-        <div class="row mt-5 mb-4">
-            <div class="col-8"></div>
-            <div class="col-4 mt-5 px-sm-5">
-                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups" style="float: right;">
-                    <div class="btn-group me-2" role="group" aria-label="First group">
-                        <button type="button" class="btn btn-primary"><i class="bi bi-linkedin" style="font-size: 2rem;"></i></button>
-                    </div>
-                    <div class="btn-group me-2" role="group" aria-label="Second group">
-                        <button type="button" class="btn btn-primary"><i class="bi bi-facebook" style="font-size: 2rem;"></i></button>
-                    </div>
-                    <div class="btn-group me-2" role="group" aria-label="Third group">
-                        <button type="button" class="btn btn-primary"><i class="bi bi-instagram" style="font-size: 2rem;"></i></button>
-                    </div>
-                    <div class="btn-group" role="group" aria-label="Fourth group">
-                        <button type="button" class="btn btn-primary"><i class="bi bi-youtube" style="font-size: 2rem;"></i></button>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <footer class="mt-5"></footer>
 
 
         <!-- Javascript -->
