--- a/pages/watchlist.html
+++ b/pages/watchlist.html
@@ -111,25 +111,7 @@
 
         <!----------------------------------------------------------------------------------------------------------------------------------------->
         <!-- Footer -->
-        <div class="row mt-5 mb-4">
-          <div class="col-8"></div>
-          <div class="col-4 mt-5 px-sm-5">
-              <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups" style="float: right;">
-                <div class="btn-group me-2" role="group" aria-label="First group">
-                  <button type="button" class="btn btn-primary"><i class="bi bi-linkedin" style="font-size: 2rem;"></i></button>
-                </div>
-                <div class="btn-group me-2" role="group" aria-label="Second group">
-                  <button type="button" class="btn btn-primary"><i class="bi bi-facebook" style="font-size: 2rem;"></i></button>
-                </div>
-                <div class="btn-group me-2" role="group" aria-label="Third group">
-                  <button type="button" class="btn btn-primary"><i class="bi bi-instagram" style="font-size: 2rem;"></i></button>
-                </div>
-                <div class="btn-group" role="group" aria-label="Fourth group">
-                  <button type="button" class="btn btn-primary"><i class="bi bi-youtube" style="font-size: 2rem;"></i></button>
-                </div>
-              </div>
-          </div>
-        </div>
+        <footer class="mt-5"></footer>
 
 
         <!-- Javascript -->
