--- a/pages/sign in.html
+++ b/pages/sign in.html
@@ -86,7 +86,7 @@
 
           
 
-        <button-si type="submit"><b><h2>Sign In</h2></b></button-si>
+          <button type="button" class="button-si" id="sign-in-button"><b><h2>Sign In</h2></b></button>
        
     </form>
   </div>
