--- a/pages/sign up.html
+++ b/pages/sign up.html
@@ -66,7 +66,7 @@
     <div class="col-box-form">
     </div>
         <h2>RELIVE THE OLD DAYS!</h2>
-    <form action="#" method="POST">
+    <form action="#" method="POST" id="signup-form">
         <div class="form-group">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
@@ -88,10 +88,10 @@
           <div class="forgot-password">
             <p><a class="link-opacity-75" href="#">Forgot Your Password?</a></p>
           </div>
-        <button-su type="submit"><b><h2>Sign Up</h2></b></button-su>
-        <button-su type="submit"><b><h2>Sign In</h2></b></button-su>
+          <button type="button" class="button-su" id="sign-up-button"><b><h2>Sign Up</h2></b></button>
+          <button type="button" class="button-si" id="sign-in-button"><b><h2>Sign In</h2></b></button>
     </form>
-  </div>
+   </div>
 
 
 
