--- a/index.html
+++ b/index.html
@@ -51,43 +51,8 @@
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="assets/Placeholders/example.png" class="d-block w-100 slide-img" alt="...">
-            <div class="overlay">
-              <h2 class="title">Movie title</h2>
-              <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod repellendus in quasi maxime ipsa pariatur accusantium veritatis laborum distinctio fugiat sed id, expedita impedit earum iure vitae, aspernatur eveniet corrupti.</p>
-              <p class="cast">Director: <br>Cast: </p>
-              <div id="button-group">
-                <div id="info"><h3>More Info</h3></div>
-                <div id="watchlist"><h3>Add to Watchlist</h3></div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="assets/Placeholders/example.png" class="d-block w-100 slide-img" alt="...">
-            <div class="overlay">
-              <h2 class="title">Movie title</h2>
-              <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod repellendus in quasi maxime ipsa pariatur accusantium veritatis laborum distinctio fugiat sed id, expedita impedit earum iure vitae, aspernatur eveniet corrupti.</p>
-              <p class="cast">Director: <br>Cast: </p>
-              <div class="button-group">
-                <div id="info"><h3>More Info</h3></div>
-                <div id="watchlist"><h3>Add to Watchlist</h3></div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="assets/Placeholders/example.png" class="d-block w-100 slide-img" alt="...">
-            <div class="overlay">
-              <h2 class="title">Movie title</h2>
-              <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod repellendus in quasi maxime ipsa pariatur accusantium veritatis laborum distinctio fugiat sed id, expedita impedit earum iure vitae, aspernatur eveniet corrupti.</p>
-              <p class="cast">Director: <br>Cast: </p>
-              <div class="button-group">
-                <div id="info"><h3>More Info</h3></div>
-                <div id="watchlist"><h3>Add to Watchlist</h3></div>
-              </div>
-            </div>
-          </div>
+        <div class="carousel-inner" id="carouselInner">
+          
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -100,80 +65,8 @@
     </div>
 
     <div class="container  pt-5">
-        <div class="row">
-          <!-- <template id="plantCardTemplate"> -->
-              <div class="col-6 col-xs-6 col-sm-6 col-md4 col-lg-3">
-                  <div class="card">
-                      <img src="assets/Placeholders/example.png" class="card-img-top" alt="movie.png">
-                      <div class="card-body">
-                          <h3 class="card-title" id="nameText">Movie Title</h3>
-                      </div>
-                  </div>
-              </div>
-          <!-- </template> -->
-
-          <div class="col-6 col-xs-6 col-sm-6 col-md4 col-lg-3">
-            <div class="card">
-                <img src="assets/Placeholders/example.png" class="card-img-top" alt="movie.png">
-                <div class="card-body">
-                    <h3 class="card-title" id="nameText">Movie Title</h3>
-                </div>
-            </div>
-          </div>
-
-          <div class="col-6 col-xs-6 col-sm-6 col-md4 col-lg-3">
-            <div class="card">
-                <img src="assets/Placeholders/example.png" class="card-img-top" alt="movie.png">
-                <div class="card-body">
-                    <h3 class="card-title" id="nameText">Movie Title</h3>
-                </div>
-            </div>
-          </div>
-
-          <div class="col-6 col-xs-6 col-sm-6 col-md4 col-lg-3">
-            <div class="card">
-                <img src="assets/Placeholders/example.png" class="card-img-top" alt="movie.png">
-                <div class="card-body">
-                    <h3 class="card-title" id="nameText">Movie Title</h3>
-                </div>
-            </div>
-          </div>
-  
-          <div class="col-6 col-xs-6 col-sm-6 col-md4 col-lg-3">
-            <div class="card">
-                <img src="assets/Placeholders/example.png" class="card-img-top" alt="movie.png">
-                <div class="card-body">
-                    <h3 class="card-title" id="nameText">Movie Title</h3>
-                </div>
-            </div>
-          </div>
-
-          <div class="col-6 col-xs-6 col-sm-6 col-md4 col-lg-3">
-            <div class="card">
-                <img src="assets/Placeholders/example.png" class="card-img-top" alt="movie.png">
-                <div class="card-body">
-                    <h3 class="card-title" id="nameText">Movie Title</h3>
-                </div>
-            </div>
-          </div>
-
-          <div class="col-6 col-xs-6 col-sm-6 col-md4 col-lg-3">
-            <div class="card">
-                <img src="assets/Placeholders/example.png" class="card-img-top" alt="movie.png">
-                <div class="card-body">
-                    <h3 class="card-title" id="nameText">Movie Title</h3>
-                </div>
-            </div>
-          </div>
-
-          <div class="col-6 col-xs-6 col-sm-6 col-md4 col-lg-3">
-            <div class="card">
-                <img src="assets/Placeholders/example.png" class="card-img-top" alt="movie.png">
-                <div class="card-body">
-                    <h3 class="card-title" id="nameText">Movie Title</h3>
-                </div>
-            </div>
-          </div>
+        <div class="row" id="movieRow">
+          
         </div>
     </div>
 
