--- a/pages/watchlist.html
+++ b/pages/watchlist.html
@@ -40,6 +40,9 @@
           <li class="nav-item">
             <a href="sign in.html"><div class="nav-link profile"><img src="../assets/profile.svg" alt="profile svg"></div></a>
           </li>
+          <li class="nav-item">
+            <a type="button" class="btn btn-dark w-auto" href="../index.html"></a>
+          </li>
         </ul>
       </div>
     </nav>
