input wrong changed to correct form

--- a/pages/sign up.html
+++ b/pages/sign up.html
@@ -96,7 +96,7 @@
             <p><a class="link-opacity-75" href="#">Forgot Your Password?</a></p>
           </div>
             <button class="button-su mt-5" type="submit"><h2>SIGN UP</h2></button>
-            <button class="button-su mt-5" type="submit"><h2>LOGIN</h2></button>
+            <button class="button-su mt-5" type="submit" href="../pages/sign in.html" ><h2>LOGIN</h2></button>
           </div>
         </form>
       </div>
