--- a/pages/movie.html
+++ b/pages/movie.html
@@ -22,7 +22,7 @@
             <div class="container mb-5">
 
                 <!-- Logo -->
-                <a class="navbar-brand" href="../index.html"><img src="../assets/Logo with layer.png" alt="logo.png"></a>
+                <a class="navbar-brand" href="../index.html"><img src="../assets/Logo with layer.png" alt="logo.png" height="32px"></a>
 
                 <!-- Nav items -->
                 <ul class="nav">
