--- a/pages/watchlist.html
+++ b/pages/watchlist.html
@@ -21,7 +21,7 @@
     <nav class="navbar fixed-top mb-5">
       <div class="container mb-3">
         <!-- Logo -->
-        <a class="navbar-brand" href="../index.html"><img src="../assets/Logo with layer.png" alt="logo.png" style="height: 100px;"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../assets/Logo with layer.png" alt="logo.png" height="32px"></a>
 
 
         <!-- Nav items -->
