--- a/pages/movie.html
+++ b/pages/movie.html
@@ -30,20 +30,17 @@
                         <a href="../index.html"><P class="nav-link">Home</P></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#"><P class="nav-link">Library</P></a>
+                        <a href="../pages/library.html"><P class="nav-link">Library</P></a>
                     </li>
                     <li class="nav-item">
                         <a href="watchlist.html"><P class="nav-link active">Watchlist</P></a>
                     </li>
                     <li class="nav-item">
-                    <div class="nav-link"></div>
-                    </li>
-                    <li class="nav-item">
                         <a href="sign in.html"><div class="nav-link profile"><img src="../assets/profile.svg" alt="profile svg"></div></a>
                     </li>
                     <li class="nav-item">
-                        <a type="button" class="btn btn-dark w-auto" href="../index.html"></a>
-                    </li>
+                        <div class="nav-link" href="sign in.html"><h4 style="color: #E94556;">Log Out</h4></div>
+                      </li>
                 </ul>
 
             </div>
@@ -77,7 +74,7 @@
                             <div class="row">
                                 <div class="col-md-4">
                                     <img src="../assets/Raiders of the lost ark.jpeg" class="img-fluid rounded-start right-img" alt="...">
-                                    <a href="../pages/watchlist.html" class="card-link" style="margin-left: 10px; margin-top: 20px; font-size: larger;">Back</a>
+                                    <a href="../pages/watchlist.html" class="btn btn-primary" style="margin-left: 10px; margin-top: 20px; font-size: larger;">Back</a>
                                 </div>
                                 
                                 <div class="col-md-8">
