--- a/pages/watchlist.html
+++ b/pages/watchlist.html
@@ -30,19 +30,16 @@
             <a href="../index.html"><P class="nav-link">Home</P></a>
           </li>
           <li class="nav-item">
-            <a href="#"><P class="nav-link">Library</P></a>
+            <a href="../pages/library.html"><P class="nav-link">Library</P></a>
           </li>
           <li class="nav-item">
             <a href="watchlist.html"><P class="nav-link active">Watchlist</P></a>
           </li>
           <li class="nav-item">
-            <div class="nav-link"></div>
-          </li>
-          <li class="nav-item">
             <a href="sign in.html"><div class="nav-link profile"><img src="../assets/profile.svg" alt="profile svg"></div></a>
           </li>
           <li class="nav-item">
-            <a type="button" class="btn btn-dark w-auto" href="../index.html"></a>
+            <div class="nav-link" href="sign in.html"><h4 style="color: #E94556;">Log Out</h4></div>
           </li>
         </ul>
       </div>
@@ -50,7 +47,7 @@
 
     <!-------------------------------------------------------------------------------------------------------------------------------------------------->
     <!-- Page Content  -->
-      <div class="container mt-5">
+      <div class="container mt-5" id="movieContainer">
         <div class="row">
           <div class="col-12 col-md-6 mb-2 mt-5">
               <img src="../assets/Lost ark 3.jpeg" class="card-img watchlist-card-img">
@@ -64,7 +61,8 @@
                   <h6 class="card-subtitle mb-2 text-body-secondary pt-3">Release Date: 1981</h6>
                   <h6 class="card-subtitle mb-2 text-body-secondary pt-3">Run Time: 1h 55min</h6>
                   <p class="card-text">Raiders of the Lost Ark is a 1981 American action-adventure film directed by Steven Spielberg from a screenplay by Lawrence Kasdan, based on a story by George Lucas and Philip Kaufman. Set in 1936, the film stars Harrison Ford as Indiana Jones, a globetrotting archaeologist vying with Nazi German forces to recover the long-lost Ark of the Covenant which is said to make an army invincible. Teaming up with his tough former romantic interest Marion Ravenwood (Karen Allen), Jones races to stop rival archaeologist Dr. René Belloq (Paul Freeman) from guiding the Nazis to the Ark and its power.</p>
-                  <a href="../pages/movie.html" class="card-link">View</a>
+                  <a href="../pages/movie.html" class="btn btn-primary">View</a>
+                  <button type="button" class="btn btn-danger m-3">Remove from Watchlist</button>
                 </div>
               </div>
           </div>
@@ -83,7 +81,8 @@
                     <h6 class="card-subtitle mb-2 text-body-secondary pt-3">Release Date: 1997</h6>
                     <h6 class="card-subtitle mb-2 text-body-secondary pt-3">Run Time: 3h 14min</h6>
                     <p class="card-text">Seventeen-year-old Rose hails from an aristocratic family and is set to be married. When she boards the Titanic, she meets Jack Dawson, an artist, and falls in love with him.</p>
-                    <a href="../pages/movie.html" class="btn btn-primary" role="button" data-bs-toggle="button" id="viewMovie" onclick="">View</a>
+                    <a href="../pages/movie.html" class="btn btn-primary">View</a>
+                    <button type="button" class="btn btn-danger m-3">Remove from Watchlist</button>
                   </div>
                 </div>
           </div>
@@ -102,12 +101,13 @@
               <div class="card">
                 <div class="card-body">
                   <h3 class="card-title" id="movieTitle">Star Wars: Return of the Jedi</h3>
-                  <span class="badge rounded-pill text-bg-secondary" id="movieGenre1">Sci-fi</span>
-                  <span class="badge rounded-pill text-bg-secondary" id="movieGenre2">Action</span>
+                  <span class="badge rounded-pill text-bg-secondary" id="movieGenre">Sci-fi</span>
+                  <span class="badge rounded-pill text-bg-secondary" id="movieGenre">Action</span>
                   <h6 class="card-subtitle mb-2 text-body-secondary pt-3" id="releaseDateText">Release Date: 1983</h6>
                   <h6 class="card-subtitle mb-2 text-body-secondary pt-3" id="runTime">Run Time: 2h 11min</h6>
                   <p class="card-text" id="movieCaption">Set one year after The Empire Strikes Back, the Galactic Empire is constructing a second Death Star to exterminate the Rebel Alliance. With intel that the Emperor will be on board, the Rebel fleet launches a full-scale attack on the Death Star in hopes of both destroying it and the Emperor. Meanwhile, Rebel hero Luke Skywalker, now a Jedi Knight, struggles to bring his father, Darth Vader, back to the light side of the Force.</p>
-                  <a href="../pages/movie.html" class="btn" role="button" data-bs-toggle="button" id="viewMovie" onclick="">View</a>
+                  <a href="../pages/movie.html" class="btn btn-primary">View</a>
+                  <button type="button" class="btn btn-danger m-3">Remove from Watchlist</button>
                 </div>
               </div>
             </div>
