--- a/pages/sign in.html
+++ b/pages/sign in.html
@@ -67,25 +67,25 @@
       <h1>RELIVE THE OLD DAYS</h1>
       <h2>SIGN UP</h2>
       <form id="sign-up-form" class="mt-5" novalidate="">
-        <div class="form-group">
+        <div class="form-group justify-content-center">
           <label>Username:</label>
-          <input class="form-control" name="username" id="username" type="text" required>
-          <div class="invalid-feedback">Please Enter Valid Username</div>
+          <input class="form-control justify-content-center" name="username" id="username" type="text" required>
+          <div class="invalid-feedback justify-content-center">Please Enter Valid Username</div>
         </div>
         <div class="form-group">
           <label>Password:</label>
-          <input class="form-control" name="password" id="password" type="password" minlength="6" required>
+          <input class="form-control justify-content-center" name="password" id="password" type="password" minlength="6" required>
           <div class="invalid-feedback">Password must be 6 characters long</div>
-          <div class="form-check">
+          <div class="form-check justify-content-center">
             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
             <label class="form-check-label" for="flexCheckDefault">
               Remember Me
             </label>
           </div>
-          <div class="forgot-password">
+          <div class="forgot-password justify-content-center">
           <p><a class="link-opacity-75" href="#">Forgot Your Password?</a></p>
         </div>
-          <button class="button-su mt-5" type="submit"><h2>LOGIN</h2></button>
+          <button class="button-su mt-5 justify-content-center" type="submit"><h2>LOGIN</h2></button>
         </div>
       </form>
     </div>
