Revert "Merge branch 'jade'"
This reverts commit 308185799b3d8f414e20f64a5b07a0b80a467cdb, reversing
changes made to 4185a8bbe8bd066e435f85911d9cd2a364204106.

--- a/pages/sign in.html
+++ b/pages/sign in.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blockbuster Sign In</title>
+    <title>Blockbuster</title>
     <!-- External Documents -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
@@ -56,7 +56,6 @@
         
  <!------------------------------------------------------------------------------------------------------------>
  <!-----Form sign in------->
-
  <div class="container-form-su mt-5 vh-100">
   <div class="row justify-content-center pt-5" >
     <div class="col-md-6 mt-5 card rounded-4 p-5">
@@ -70,64 +69,26 @@
           <label>Username:</label>
           <input class="form-control" name="username" id="username" type="text" required>
           <div class="invalid-feedback">Please Enter Valid Username</div>
-
- <body>
-  <div class="container-form-su">
-    <div class="row justify-content-center pt-5">
-      <div class="col-md-6 mt-5 card rounded-4 p-5">
-        <div class="col-box-form">
-          <h1 class="form-title">RELIVE THE OLD DAYS</h1>
-
         </div>
-        <h2 class="form-subtitle">LOGIN</h2>
-        <form id="login-form" class="mt-5" novalidate>
-          <div class="form-group">
-            <label for="username">Username:</label>
-            <input class="form-control" name="username" id="username" type="text" required>
-            <div class="invalid-feedback">Please Enter Valid Username</div>
-          </div>
-          <div class="form-group">
-            <label for="password">Password:</label>
-            <input class="form-control" name="password" id="password" type="password" minlength="6" required>
-            <div class="invalid-feedback">Password must be at least 5 characters long, contain a capital letter and number.</div>
-          </div>
+        <div class="form-group">
+          <label>Password:</label>
+          <input class="form-control" name="password" id="password" type="password" minlength="6" required>
+          <div class="invalid-feedback">Password must be 6 characters long</div>
           <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-            <label class="form-check-label" for="flexCheckDefault">Remember Me</label>
+            <label class="form-check-label" for="flexCheckDefault">
+              Remember Me
+            </label>
           </div>
           <div class="forgot-password">
-            <p><a class="link-opacity-75" href="#">Forgot Your Password?</a></p>
-          </div>
-          <button class="button-su" type="submit">LOGIN</button>
-        </form>
-      </div>
+          <p><a class="link-opacity-75" href="#">Forgot Your Password?</a></p>
+        </div>
+          <button class="button-su mt-5" type="submit"><h2>LOGIN</h2></button>
+        </div>
+      </form>
     </div>
   </div>
-    
-  <footer>
-    <div class="footer-content">
-        <div class="footer-logo">
-            <img src="../assets/Logo.jpg" alt="Blockbuster Logo">
-            <h2>Blockbuster Streaming</h2>
-        </div>
-        <div class="footer-links">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Library</a></li>
-                <li><a href="#">Watchlist</a></li>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
-        </div>
-        <div class="footer-social">
-            <ul>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Twitter</a></li>
-                <li><a href="#">Instagram</a></li>
-            </ul>
-        </div>
-    </div>
-  </footer>
+ </div>
 
     <!-- Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
