--- a/pages/sign up.html
+++ b/pages/sign up.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blockbuster</title>
+    <title>Blockbuster Sign Up</title>
     <!-- External Documents -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
@@ -98,9 +98,70 @@
             <button class="button-su mt-5" type="submit" href="../pages/sign in.html" ><h2>LOGIN</h2></button>
           </div>
         </form>
+
+ <div class="container-form-su">
+  <div class="row justify-content-center pt-5">
+    <div class="col-md-6 card rounded-4 p-5">
+      <div class="col-box-form">
+        <h1 class="form-title">RELIVE THE OLD DAYS</h1>
+
       </div>
+      <h2 class="form-subtitle">SIGN UP</h2>
+      <form id="sign-up-form" class="mt-5" novalidate>
+        <div class="form-group">
+          <label for="username">Username:</label>
+          <input class="form-control" name="username" id="username" type="text" required>
+          <div class="invalid-feedback">Please enter a valid username</div>
+        </div>
+        <div class="form-group">
+          <label for="email">Email Address:</label>
+          <input class="form-control" name="email" id="email" type="email" required>
+          <div class="invalid-feedback">Please enter a valid email address</div>
+        </div>
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input class="form-control" name="password" id="password" type="password" minlength="5"  required>
+          <div class="invalid-feedback">Password must be at least 5 characters long, contain a capital letter and number.</div>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault">Remember Me</label>
+        </div>
+        <div class="forgot-password">
+          <p><a class="link-opacity-75" href="#">Forgot Your Password?</a></p>
+        </div>
+        <button class="button-su" type="submit">SIGN UP</button>
+        <div class="or-text"><h3>or</h3></div>
+        <button class="button-si" type="submit">LOGIN</button>
+      </form>
     </div>
-   </div>
+  </div>
+</div>
+
+<footer>
+  <div class="footer-content">
+      <div class="footer-logo">
+          <img src="../assets/Logo.jpg" alt="Blockbuster Logo">
+          <h2>Blockbuster Streaming</h2>
+      </div>
+      <div class="footer-links">
+          <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Library</a></li>
+              <li><a href="#">Watchlist</a></li>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">Contact Us</a></li>
+          </ul>
+      </div>
+      <div class="footer-social">
+          <ul>
+              <li><a href="#">Facebook</a></li>
+              <li><a href="#">Twitter</a></li>
+              <li><a href="#">Instagram</a></li>
+          </ul>
+      </div>
+  </div>
+</footer>
 
 
 
@@ -111,4 +172,3 @@
     <script src="../JS/index.js"></script>
 </body>
 </html>
-
