--- a/pages/sign up.html
+++ b/pages/sign up.html
@@ -90,13 +90,13 @@
         <div class="forgot-password">
           <p><a class="link-opacity-75" href="#">Forgot Your Password?</a></p>
         </div>
-        <a href="../pages/movie.html">
+        <a href="../index.html">
           <button class="button-su" type="submit">SIGN UP</button>
        </a>
 
         <div class="or-text"><h3>or</h3></div>
         <a href="../pages/sign in.html">
-          <button class="button-si" type="submit">LOGIN</button>
+          <button class="button-si" type="button">LOGIN</button>
        </a>
 
       </form>
