--- a/pages/sign in.html
+++ b/pages/sign in.html
@@ -64,7 +64,7 @@
           <h1 class="form-title">RELIVE THE OLD DAYS</h1>
         </div>
         <h2 class="form-subtitle">LOGIN</h2>
-        <form id="login-form" class="mt-5" novalidate>
+        <form id="sign-up-form" class="mt-5" novalidate action="../index.html">
           <div class="form-group">
             <label for="username">Username:</label>
             <input class="form-control" name="username" id="username" type="text" required>
