--- a/pages/sign in.html
+++ b/pages/sign in.html
@@ -83,7 +83,7 @@
             <p><a class="link-opacity-75" href="#">Forgot Your Password?</a></p>
           </div>
           <a href="../index.html">
-            <button class="button-su" type="button">SIGN UP</button>
+            <button class="button-su" type="submit">SIGN UP</button>
          </a>
          <div class="login-container">
             <div class="or-text">
