--- a/pages/library.html
+++ b/pages/library.html
@@ -47,12 +47,13 @@
 
     <div class="container">
         <div id="filter-group">
-            <div class="filter-button"><h3>FILTER 1</h3></div>
-            <div class="filter-button"><h3>FILTER 2</h3></div>
-            <div class="filter-button"><h3>FILTER 3</h3></div>
+            <div class="filter-button" data-filter="upcoming" onclick="filterChange(this)"><h3>Upcoming</h3></div>
+            <div class="filter-button" data-filter="popular" onclick="filterChange(this)"><h3>Popular</h3></div>
+            <div class="filter-button" data-filter="now_playing" onclick="filterChange(this)"><h3>In Cinema</h3></div>
         </div>
-
+        <h2 id="best-movies">TRENDING MOVIES</h2>
         <div class="row library-row" id="ratedRow">
+            
             <!-- <template id="plantCardTemplate"> -->
                 <div class="col-6 col-xs-6 col-sm-6 col-md4 col-lg-3">
                     <div class="card">
