--- a/pages/sign up.html
+++ b/pages/sign up.html
@@ -46,10 +46,13 @@
                   <li class="nav-item">
                     <a class="nav-link" href="../pages/watchlist.html">Watch List</a>
                   </li>
+                  <li class="nav-item">
+                    <a href="sign in.html"><div class="nav-link profile"><img src="../assets/profile.svg" alt="profile svg"></div></a>
+                  </li>
+                  <li class="nav-item">
+                    <div class="nav-link" href="sign in.html"><h4 style="color: #E94556;">Log Out</h4></div>
+                  </li>
                 </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                </form>
                 
               </div>
             </div>
