finish home page

--- a/pages/movie.html
+++ b/pages/movie.html
@@ -61,9 +61,9 @@
                         <div class="card m-3" style="width: 40%; height: 350px;">
                             <img src="../assets/Placeholders/example.png" class="card-img side-card-img" alt="side-card-img" style="width: 100%;" id="movieSideImage2">
                         </div>
-                        <div class="card m-3" style="width: 40%; height: 350px;">
+                        <!-- <div class="card m-3" style="width: 40%; height: 350px;">
                             <img src="../assets/Placeholders/example.png" class="card-img side-card-img" alt="side-card-img" style="width: 100%;" id="movieSideImage3">
-                        </div>
+                        </div> -->
                     </div>
 
                     
