--- a/pages/watchlist.html
+++ b/pages/watchlist.html
@@ -14,9 +14,7 @@
 
     <!-- Internal Documents -->
     <link rel="stylesheet" href="../css/main.css">
-    <script src="../JS/index.js"></script>
     <script src="../JS/watchlist.js"></script>
-    <script src="../JS/movie.js"></script>
   
   </head>
   <body>
@@ -49,8 +47,8 @@
 
     <!-------------------------------------------------------------------------------------------------------------------------------------------------->
     <!-- Page Content  -->
-      <div class="container mt-5" id="movieContainer">
-        <div class="row" id="moviesRow">
+      <div class="container mt-15" id="movieContainer">
+        <div class="row moviesRow">
           <div class="col-12 col-md-6 mb-2 mt-5">
               <img src="../assets/Lost ark 3.jpeg" class="card-img watchlist-card-img">
           </div>
@@ -70,7 +68,7 @@
           </div>
         </div>
 
-        <div class="row" id="moviesRow">
+        <div class="row moviesRow">
           <div class="col-12 col-md-6 mb-2 mt-3">
               <img src="../assets/Titanic.jpeg" class="card-img watchlist-card-img">
           </div>
