--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                   <a href="pages/watchlist.html"><P class="nav-link">Watchlist</P></a>
                 </li>
                 <li class="nav-item">
-                  <a href="../sign in.html"><div class="nav-link profile"><img src="../assets/profile.svg" alt="profile svg"></div></a>
+                  <div class="nav-link profile"><img src="../assets/profile.svg" alt="profile svg"></div>
                 </li>
                 <li class="nav-item">
-                  <div class="nav-link" href="../sign in.html"><h4 style="color: #E94556;">Log Out</h4></div>
+                  <a class="nav-link" href="../pages/sign in.html"><h4 style="color: #E94556;">Log Out</h4></a>
                 </li>
             </ul>
         </div>
@@ -64,12 +64,35 @@
         </button>
     </div>
 
-    <div class="container  pt-5">
+    <div class="container  pt-5 mb-5">
         <div class="row" id="movieRow">
           
         </div>
     </div>
 
-    <footer class="mt-5"></footer>
+    <footer id="moviesFooter">
+      <div class="footer-content">
+          <div class="footer-logo">
+              <img src="../assets/Logo.jpg" alt="Blockbuster Logo">
+              <h2>Blockbuster Streaming</h2>
+          </div>
+          <div class="footer-links">
+              <ul>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Library</a></li>
+                  <li><a href="#">Watchlist</a></li>
+                  <li><a href="#">FAQ</a></li>
+                  <li><a href="#">Contact Us</a></li>
+              </ul>
+          </div>
+          <div class="footer-social">
+              <ul>
+                  <li><a href="#">Facebook</a></li>
+                  <li><a href="#">Twitter</a></li>
+                  <li><a href="#">Instagram</a></li>
+              </ul>
+          </div>
+      </div>
+  </footer>
 </body>
 </html>
