--- a/pages/movie.html
+++ b/pages/movie.html
@@ -34,13 +34,13 @@
                         <a href="../pages/library.html"><P class="nav-link">Library</P></a>
                     </li>
                     <li class="nav-item">
-                        <a href="watchlist.html"><P class="nav-link active">Watchlist</P></a>
+                        <a href="watchlist.html"><P class="nav-link">Watchlist</P></a>
                     </li>
                     <li class="nav-item">
-                        <a href="sign in.html"><div class="nav-link profile"><img src="../assets/profile.svg" alt="profile svg"></div></a>
+                        <div class="nav-link profile"><img src="../assets/profile.svg" alt="profile svg"></div>
                     </li>
                     <li class="nav-item">
-                        <div class="nav-link" href="sign in.html"><h4 style="color: #E94556;">Log Out</h4></div>
+                        <a class="nav-link" href="sign in.html"><h4 style="color: #E94556;">Log Out</h4></a>
                     </li>
                 </ul>
 
