file routing changes

--- a/pages/library.html
+++ b/pages/library.html
@@ -22,7 +22,7 @@
         <div class="container">
 
             <!-- Logo -->
-            <a class="navbar-brand" href="../index.html"><img src="../assets/Logo with layer.png" alt="logo.png" height="32px"></a>
+            <a class="navbar-brand" href="../index.html"><img src="../assets/Logo_with_layer.png" alt="logo.png" height="32px"></a>
 
             <!-- Nav items -->
             <ul class="nav">
@@ -39,7 +39,7 @@
                     <div class="nav-link profile"><img src="../assets/profile.svg" alt="profile svg"></div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="sign in.html" href="sign in.html"><h4 style="color: #E94556;">Log Out</h4></a>
+                    <a class="nav-link" href="sign_in.html" href="sign in.html"><h4 style="color: #E94556;">Log Out</h4></a>
                 </li>
             </ul>
         </div>
