--- a/pages/movie.html
+++ b/pages/movie.html
@@ -23,7 +23,7 @@
             <div class="container mb-5">
 
                 <!-- Logo -->
-                <a class="navbar-brand" href="../index.html"><img src="../assets/Logo with layer.png" alt="logo.png" height="32px"></a>
+                <a class="navbar-brand" href="../index.html"><img src="../assets/Logo_with_layer.png" alt="logo.png" height="32px"></a>
 
                 <!-- Nav items -->
                 <ul class="nav">
@@ -40,7 +40,7 @@
                         <div class="nav-link profile"><img src="../assets/profile.svg" alt="profile svg"></div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sign in.html"><h4 style="color: #E94556;">Log Out</h4></a>
+                        <a class="nav-link" href="sign_in.html"><h4 style="color: #E94556;">Log Out</h4></a>
                     </li>
                 </ul>
 
