--- a/pages/sign_in.html
+++ b/pages/sign_in.html
@@ -26,7 +26,7 @@
           <div class="container">
   
               <!-- Logo -->
-              <a class="navbar-brand" href="../index.html"><img src="../assets/Logo with layer.png" alt="logo.png" height="32px"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/Logo_with_layer.png" alt="logo.png" height="32px"></a>
   
               <!-- Nav items -->
               <ul class="nav">
@@ -81,7 +81,7 @@
             <div class="or-text">
               <h3>or</h3>
             </div>
-            <a href="../pages/sign up.html">
+            <a href="../pages/sign_up.html">
               <button class="button-si" type="button">SIGN UP</button>
             </a>
         </div>
