--- a/pages/sign_up.html
+++ b/pages/sign_up.html
@@ -24,7 +24,7 @@
         <div class="container">
 
             <!-- Logo -->
-            <a class="navbar-brand" href="../index.html"><img src="../assets/Logo with layer.png" alt="logo.png" height="32px"></a>
+            <a class="navbar-brand" href="../index.html"><img src="../assets/Logo_with_layer.png" alt="logo.png" height="32px"></a>
 
             <!-- Nav items -->
             <ul class="nav">
@@ -86,7 +86,7 @@
         <div class="or-text">
             <h3>or</h3>
         </div>
-        <a href="../pages/sign in.html">
+        <a href="../pages/sign_in.html">
             <button class="button-si" type="button">LOGIN</button>
         </a>
     </div>
