--- a/pages/watchlist.html
+++ b/pages/watchlist.html
@@ -21,7 +21,7 @@
     <nav class="navbar fixed-top mb-5">
       <div class="container mb-3">
         <!-- Logo -->
-        <a class="navbar-brand" href="../index.html"><img src="../assets/Logo with layer.png" alt="logo.png" height="32px"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../assets/Logo_with_layer.png" alt="logo.png" height="32px"></a>
 
 
         <!-- Nav items -->
@@ -39,7 +39,7 @@
             <div class="nav-link profile"><img src="../assets/profile.svg" alt="profile svg"></div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../pages/sign in.html"><h4 style="color: #E94556;">Log Out</h4></a>
+            <a class="nav-link" href="../pages/sign_in.html"><h4 style="color: #E94556;">Log Out</h4></a>
           </li>
         </ul>
       </div>
